assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');


h1, h2, h3, h4 {
    font-family: 'Merriweather', serif;
}

p {
    font-family: 'Open Sans', sans-serif;
}

/*------------------ Header ------------------*/

.navbarCustom {
    padding: 10px 90px;
    background-color: #231f20 !important;
}

.navItem {
    color: #fafafa !important;
}

.navItem:hover {
    color: #e09900 !important;
}

/*------------------ Hero Image Section ------------------*/

.hero-image {
    /* Resource: Photo by Adam Jaime on Unsplash https://unsplash.com/photos/dmkmrNptMpw */
    background: url("../img/hero-image.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 600px;
    min-width: 100%;
    position: relative;
    left: 0;
    right: 0;
}

.hero-text {
    position: absolute;
    color: #fafafa;
    top: 200px;
    bottom: 165px;
    left: 80px;
    right: 0px;
}

.hero-text h1 {
    font-weight: 700;
    letter-spacing: 2px;
}

.hero-text h2 {
    position: absolute;
    line-height: 50px;
    font-family: 'Open Sans', sans-serif;
    font-size: 30px;
}

.hero-button {
    font-family: 'Open Sans', sans-serif;
    position: relative;
    background-color: #231f20;
    color: #fafafa;
    min-height: 50px;
    font-size: 20px;
    font-weight: 700;
    margin: 90px 0;
    padding: 10px 15px;
}

.hero-button:hover {
    color: #e09900;
}

/*------------------ Discover Distilleries Section ------------------*/

.distillerySection {
    padding-top: 50px;
    padding-bottom: 120px;
}

.distillerySection h2 {
    color: #231f20;
    padding-bottom: 10px;
    position: relative;
}

.distillerySection h2::after {
    content:'';
    height: 3px;
    width: 100px;
    background: #231f20;
    position: absolute;
    left: 0;
    bottom: 0;
}

/*------------------ Tabs ------------------*/

/* Resource: Tab code sourced from https://www.w3schools.com/howto/howto_js_tabs.asp */
.tab button {
    background-color: #eceaea;
    border: none;
    padding: 10px 20px;
    border-radius: 4px;
    font-weight: 400;
    float: right;
    font-family: 'Open Sans', sans-serif;
}

.mapTab {
    margin-left: 10px;
}

.tab button:hover {
  background-color: #231f20;
  color: #fafafa;
}

.tab button.active {
  background-color: #e09900;
}

.tabcontent h3{
    color: #e09900;
    margin-top: 50px;
}

.fa-map-marker, .fa-map {
    padding-right: 10px;
}

/*------------------ Hover Filter Menu ------------------*/

/* Resource: Code sourced from W3C and custom styling added - https://www.w3schools.com/howto/howto_css_dropdown.asp */
.hoverButton {
    background-color: #231f20;
    color: #fafafa;
    font-size: 17px;
    font-family: 'Open Sans', sans-serif;
    border-radius: 4px;
    padding: 10px;
    border: none;
};

/* Position dropdown content */
.dropdown {
    position: relative;
    display: inline-block;
    margin-bottom: 50px;
} 

.fa-sort-desc {
    padding-left: 7px;
}

.dropdownContent {
    display: none;
    position: absolute;
    background-color: #f1f1f1;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px #00000033;
    z-index: 1;
}

/* Style dropdown links */
.dropdownContent a {
    color: #231f20;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

/* Change colour of dropdown link on hover */
.dropdownContent a:hover {
    background-color: #dddddd;
}

.dropdown:hover .dropdownContent {
    display: block;
}

/*------------------ Grid Section ------------------*/

.gridDiv {
    padding: 30px;
    background-color: #eceaea;
    border-radius: 4px;
    height: 750px;
    /*margin: 70px 60px 0px 30px;*/
    margin: 70px 40px 0 0px;
    float: left;
    /* Resource: https://www.w3schools.com/css/css3_shadows_box.asp */
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
    transition: transform .2s; 
}

/* Resource: Expand on hover - https://www.w3schools.com/howto/howto_css_zoom_hover.asp */
.gridDiv:hover {
    transform: scale(1.02); 
}

.county {
    background-color: rgba(169, 169, 169, 0.35);
    width: 40%;
    padding: 5px;
    border-radius: 3px;
}

.fa-home, .fa-times-circle, .fa-info-circle {
    font-size: 20px;
}

.fa-times-circle {
    color: #ee2a2a;
}

.website-btn {
    background-color: #231f20;
    color: #fafafa;
    padding: 10px;
}

.website-btn:hover {
    background-color: #e09900;
}

.gridImage {
    width: 100%; 
}

/*------------------ Leaflet Map ------------------*/

#map {
    min-height: 600px;
    width: 100%;
}

.mapImage {
    max-height: 150px;
}

.mapTitle {
    font-size: 20px;
    font-weight: 300;
    margin-bottom: 0px;
}

/*------------------ History Section ------------------*/

.historySection {
    background-color: #231f20;
    padding: 120px 0;
    color: #fafafa;
}

.historySection h2 {
    color: #e09900;
    padding-bottom: 10px;
}

/*------------------ Image Section ------------------*/

.imageSection {
    padding: 120px 0px;
}

/*------------------ Footer ------------------*/

.footer {
    background-color: #231f20;
    min-height: 300px;
    padding: 70px 0px;
}

/* Resource: List menu - https://www.w3schools.com/html/tryit.asp?filename=tryhtml_lists_menu */
ul {
  list-style-type: none;
  overflow: hidden;
  padding-inline-start: 0px;
}

li {
  float: left;
  padding-right: 12px;
  font-family: 'Open Sans', sans-serif;
}

li a {
    color: #fafafa;
}

.footer li a:hover {
    color: #e09900;
    text-decoration: none;
}

.footer img {
    height: 120px;
    padding-top: 40px;
}

.contact a {
    color: #fafafa;
}

footer p {
    color: #fafafa;
}

footer .fa {
    padding-right: 5px;
    color: #e09900;
}

footer .fa-phone-square {
    font-size: 20px;
}

/*------------------ Media Queries ------------------*/

/* Navbar */
@media only screen and (max-width: 600px){
    .navbarCustom {
        padding: 15px 15px;
    }
}

/* Hero image section */
@media only screen and (max-width: 600px){
    .hero-image {
        min-height: 600px;
        min-width: 100%;
    }
} 

@media only screen and (max-width: 600px){
    .hero-text {
        left: 10px;
        top: 40px;
    }
}

@media only screen and (max-width: 600px){
    .hero-text  h1{
        display: none;
    }
}

@media only screen and (max-width: 600px){
    .hero-text h2{
        font-size: 170%;
        font-weight: bold;
        margin-top: 400px;
    }
}

@media only screen and (max-width: 600px){
    .hero-button {
        display: none;
    }
}

/* Tab section 

/* Mobile L */
@media only screen and (max-width: 600px){
    .tab {
        padding-top: 30px;
        margin-right: 90px;
    }
}

/* Mobile M */
@media only screen and (max-width: 375px){
    .tab {
        margin-right: 55px;
    }
}

/* Mobile S */
@media only screen and (max-width: 320px){
    .tab {
        margin-right: 0px;
    }
}

@media only screen and (max-width: 600px){
.tabcontent h3 {
    margin-top: 100px;
    }
}

/* Grid view section */
@media only screen and (max-width: 600px){
    .gridDiv {
        margin-top: 50px;
    }
}

/* Image section */
@media only screen and (max-width: 764px){
    .imageOne .img-fluid {
        padding-bottom: 60px;
    }
}

